@@ -1,7 +1,5 @@
 package jp.posl.jprophet;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import jp.posl.jprophet.patch.PatchCandidate;
@@ -11,7 +9,7 @@ public class StagedCondGenerator {
         
     }
     public List<PatchCandidate> applyConditionTemplate(PatchCandidate patchCandidate){
-        return new ArrayList<>(Arrays.asList(patchCandidate));
+        return List.of(patchCandidate);
     }
     
 }
