@@ -13,8 +13,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 
@@ -30,7 +28,7 @@ public class PatchCandidateGeneratorTest {
         String filePath = "src/test/resources/test01.java";
         String fileFqn = "test01";
         FileLocator fileLocator = new FileLocator(filePath, fileFqn);
-        List<FileLocator> fileLocators = new ArrayList<FileLocator>(Arrays.asList(fileLocator));
+        List<FileLocator> fileLocators = List.of(fileLocator);
         Project stubProject = mock(GradleProject.class);
         when(stubProject.getSrcFileLocators()).thenReturn(fileLocators);
 
